--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "generate-pdf": "node scripts/generate-pdf.mjs"
   },
   "dependencies": {
     "@notionhq/client": "^5.9.0",
@@ -21,6 +22,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
+    "puppeteer": "^24.0.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
