--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,10 +63,19 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y fonts-noto-cjk
 
+      - name: Create basePath symlink for PDF generation
+        run: |
+          REPO_NAME="${{ github.event.repository.name }}"
+          mkdir -p "out/${REPO_NAME}"
+          ln -s ../_next "out/${REPO_NAME}/_next"
+
       - name: Generate PDFs
         env:
           STATIC_MODE: "true"
         run: npm run generate-pdf
+
+      - name: Remove basePath symlink
+        run: rm -rf "out/${{ github.event.repository.name }}"
 
       - name: Encrypt PDFs
         env:
